@@ -12,6 +12,7 @@ main select generated by the Query object.
 largely interchangeable with "ensure" (so says the dictionary), so I'm not 
 completely illiterate, but its definitely sub-optimal to "ensure" which is
 non-ambiguous.
+- invalid options sent to 'cascade' string will raise an exception [ticket:406]
 
 0.3.3
 - string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
